--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.18",
     "@svgr/webpack": "^5.5.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
@@ -29,6 +30,7 @@
     "postcss": "^8.2.4",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
+    "react-countdown": "^2.3.2",
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.1",
