--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-indiana-drag-scroll": "^2.0.1",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
+    "react-slick": "^0.28.1",
     "react-tooltip": "^4.2.19",
     "sass": "^1.32.5",
     "styled-components": "^5.2.1",
