--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
     "react-slick": "^0.28.1",
+    "react-table": "^7.7.0",
     "react-tooltip": "^4.2.19",
     "sass": "^1.32.5",
     "styled-components": "^5.2.1",
