--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +19,9 @@
     "@svgr/webpack": "^5.5.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
-    "autoprefixer": "^10.2.4",
     "gsap": "^3.6.1",
     "html-react-parser": "^1.2.1",
+    "http-proxy-middleware": "^2.0.0",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "lord-icon-element": "https://github.com/alienbuild/lord-icon-element.git",
@@ -28,7 +30,6 @@
     "moment": "^2.29.1",
     "next": "^10.0.4",
     "nprogress": "^0.2.0",
-    "postcss": "^8.2.4",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-countdown": "^2.3.2",
@@ -43,7 +44,19 @@
     "react-table": "^7.7.0",
     "react-tooltip": "^4.2.19",
     "sass": "^1.32.5",
+    "storybook-addon-designs": "^6.0.0",
     "styled-components": "^5.2.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss-neumorphism": "^0.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "autoprefixer": "9",
+    "babel-loader": "^8.2.2",
+    "postcss": "7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
