--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "isomorphic-fetch": "^3.0.0",
-    "moment": "^2.29.1",
-    "next": "^11.0.1",
     "lord-icon-element": "https://github.com/alienbuild/lord-icon-element.git",
     "lottie-web": "^5.6.10",
+    "moment": "^2.29.1",
+    "next": "^11.0.1",
+    "noisejs": "2.1.0",
     "nprogress": "^0.2.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
