--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "gsap": "^3.7.1",
     "isomorphic-fetch": "^3.0.0",
     "lord-icon-element": "https://github.com/alienbuild/lord-icon-element.git",
     "lottie-web": "^5.6.10",
+    "match-sorter": "^6.3.0",
     "moment": "^2.29.1",
     "next": "^11.0.1",
     "noisejs": "2.1.0",
@@ -36,7 +38,9 @@
     "react": "^17.0.2",
     "react-countup": "^4.4.0",
     "react-dom": "^17.0.2",
+    "react-indiana-drag-scroll": "^2.0.1",
     "react-slick": "^0.28.1",
+    "react-table": "^7.7.0",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.0"
   },
