--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nprogress": "^0.2.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-autosuggest": "^10.1.0",
     "react-countup": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-indiana-drag-scroll": "^2.0.1",
