--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-slick": "^0.28.1",
     "react-table": "^7.7.0",
     "react-tooltip": "^4.2.21",
+    "react-xmasonry": "^3.0.5",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
