--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@zeit/next-sass": "^1.0.1",
     "gsap": "^3.7.1",
     "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^3.0.0",
     "lord-icon-element": "https://github.com/alienbuild/lord-icon-element.git",
     "lottie-web": "^5.6.10",
     "match-sorter": "^6.3.0",
