--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-table": "^7.7.0",
     "react-tooltip": "^4.2.21",
     "react-xmasonry": "^3.0.5",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "use-react-screenshot": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
