--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "gsap": "^3.7.1",
+    "i18next": "^20.6.1",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^3.0.0",
     "lord-icon-element": "https://github.com/alienbuild/lord-icon-element.git",
@@ -41,6 +44,7 @@
     "react-autosuggest": "^10.1.0",
     "react-countup": "^4.4.0",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.12.0",
     "react-indiana-drag-scroll": "^2.0.1",
     "react-slick": "^0.28.1",
     "react-table": "^7.7.0",
