--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-i18next": "^11.12.0",
     "react-indiana-drag-scroll": "^2.0.1",
     "react-slick": "^0.28.1",
+    "react-sticky-el": "^2.0.9",
     "react-table": "^7.7.0",
     "react-tooltip": "^4.2.21",
     "react-xmasonry": "^3.0.5",
